--- a/sep28/Sep-28Class.tex
+++ b/sep28/Sep-28Class.tex
@@ -39,6 +39,7 @@
 \newcommand{\rvec}{\ensuremath{\vec{r}}}
 \newcommand{\vecr}{\ensuremath{\vec{r}}}
 \newcommand{\omvec}{\ensuremath{\hat{\Omega}}}
+\newcommand{\vOmega}{\ensuremath{\hat{\Omega}}}
 \newcommand{\sigs}{\ensuremath{\Sigma_s(\rvec,E'\rightarrow E,\omvec'\rightarrow\omvec)}}
 \newcommand{\el}{\ensuremath{\ell}}
 \newcommand{\sigso}{\ensuremath{\Sigma_{s,0}}}
@@ -60,6 +61,9 @@ Public service announcements:
 \end{itemize}
 
 We won't do the last problem of the homework assignment this class. It turns out Max did a Serpent tutorial before assigning Serpent problems, so it only seems fair I do the same. If you've already done it it will be on the next assignment, but for the rest of you we will have a Serpent tutorial on Monday, October 5.
+
+Also, I am going to update the homework deadline to 3 pm t(rather than 5).
+You can turn it in to Kelly on Fridays when it's due (can leave it on her desk if she's not there).
 
 --------------------------------------------\\
 Last time we talked about solving linear differential equations. 
@@ -217,6 +221,55 @@ G(x,x') = \frac{L}{2D}H(x-x')e^{-(x-x')/L} + \frac{L}{2D}[1-H(x-x')]e^{x-x'}
 \end{align*}
 
 %--------------------------------------------------------------------
+%--------------------------------------------------------------------
+-------------------------------------------------\\
+I've been looking ahead, and I'd like to change the course to be much more transport oriented than diffusion oriented. 
+This means the material would come much more out of Bell and Glasstone (freely available online) and Lewis and Miller (not) than Duderstadt. 
+Would that be okay for everyone?
+I think it will be way more interesting. 
+
+With that in mind, here's an update of the TE, where I will use $\psi(\vec{r}, E, \vOmega, t)$ for angular neutron flux.
+%
+\begin{align*}
+\frac{1}{v} \frac{d \psi}{dt} &+ \vOmega \cdot \nabla \psi(\vec{r}, E, \vOmega, t) + \Sigma_t \psi(\vec{r}, E, \vOmega, t) = \int_{4 \pi} d\vOmega \int_0^{\infty} dE' \: \Sigma_s(E', \vOmega' \rightarrow E, \vOmega) \psi(\vec{r}, E', \vOmega', t)\\
+ +& \frac{\chi(E)}{4 \pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4 \pi} d\vOmega \:\psi(\vec{r}, E', \vOmega', t + S(\vec{r}(\vec{r}, E, \vOmega, t)
+\end{align*}
+
+For generality (and because it can be tricky), I want to cover the \underline{streaming term in curvilinear coordinates}.
+$\vOmega \cdot \nabla$ is the derivative of angular flux along the direction of motion $\vOmega$.
+
+[draw picture of angles]
+
+\begin{align*}
+\vOmega &= \hat{e}_1 \cos(\theta) + \hat{e}_2 \cos(\gamma) + \hat{e}_3 \cos(\chi) \\
+\nabla &= \hat{e}_1 \underbrace{\mathcal{D}_1}_{\text{derivative in direction }\hat{e}_1} + \hat{e}_2 \mathcal{D}_2 + \hat{e}_3 \mathcal{D}_3\\
+&= \hat{e}_1 \frac{d}{dx} + \hat{e}_2 \frac{d}{dy} + \hat{e}_3 \frac{d}{dz} \quad \text{in Cartesian}
+\end{align*}
+
+In curvilinear geometry, neutrons ``migrate" across $\vOmega$ as the stream in straight lines. 
+We can see this in spherical geometry (note, $dr$, $d\theta$, and $ds$ are assumed to be very small):
+
+[draw streaming picture]
+
+\begin{align*}
+\frac{d \psi}{ds} &= \frac{d \psi}{dr} \frac{dr}{ds} + \frac{d\psi}{d\mu} \frac{d\mu}{ds} \\
+&\text{Look a the figure to define the terms}\\
+\frac{dr}{ds} &= \cos(\theta) = \mu \\
+%
+\frac{d \mu}{ds} &= -\sin(\theta) \frac{d \theta}{ds} = -\sin(\theta) \biggl(\frac{-\sin(\theta)}{r} \biggr) = \biggl(\frac{1 - \mu^2}{r} \biggr) \\
+%
+\frac{d\psi}{ds} &= \mu \frac{\partial \psi}{\partial r} + \underbrace{\frac{(1 - \mu^2)}{r}\frac{\partial \psi}{\partial \mu}}_{\text{redistribution term}}
+\end{align*}
+%
+We can extend all of that we get the ``conservation form" of the term (see B \& G 1.3b for derivation)
+\[\frac{d\psi}{ds} = \frac{\mu}{r^2} \frac{\partial(r^2 \psi)}{\partial r} + \frac{1}{r} \frac{\partial}{\partial \mu}\bigl[(1 - \mu^2) \psi \bigr] \:. \]
+
+A table of this term is given in L \& M 1.1-3 for various geometries.
+
+
+
+%--------------------------------------------------------------------
+-------------------------------------------------\\
 \underline{Eigenfunction expansion method}
 
 Term definitions:
