--- a/sep28/Sep-28Class.tex
+++ b/sep28/Sep-28Class.tex
@@ -62,8 +62,8 @@ Public service announcements:
 
 We won't do the last problem of the homework assignment this class. It turns out Max did a Serpent tutorial before assigning Serpent problems, so it only seems fair I do the same. If you've already done it it will be on the next assignment, but for the rest of you we will have a Serpent tutorial on Monday, October 5.
 
-Also, I am going to update the homework deadline to 3 pm t(rather than 5).
-You can turn it in to Kelly on Fridays when it's due (can leave it on her desk if she's not there).
+Also, I am going to update the homework deadline to 3 pm (rather than 5).
+You can turn it in to Kelly on Fridays when it's due (can leave it on her desk in 3115 Etcheverry if she's not there).
 
 --------------------------------------------\\
 Last time we talked about solving linear differential equations. 
@@ -77,7 +77,7 @@ One solution method is \textit{variation of constants / parameters}, where we br
 \begin{align*}
 \phi_{i,h}(x),  \:i &= 1,\dotsc, n \:\text{ independent solutions} \\
 \phi_{part}(x) &= \sum_{i=1}^n c_i\phi_{i,h}(x)\\
-\sum_{i=1}^n c'_i(x) \phi^{(j)}_{i,h}(x) &= 0, \quad j = 0, \dots, n-1 \\
+\sum_{i=1}^n c'_i(x) \phi^{(j)}_{i,h}(x) &= 0, \quad j = 0, \dots, n-2 \\
 \sum_{i=1}^n c_i'\phi^{(n-1)}_{i,h}(x) &= \frac{f(x)}{a_0(x)} \\
 c_i(x)& = \int dx\:c_i'(x) \:.
 \end{align*}
@@ -204,7 +204,7 @@ Consider a plane source in an infinite medium.
 %
 \begin{align*}
 \frac{d^2\phi(x)}{dx^2} &- \frac{1}{L^2}\phi(x) = -\frac{S}{D}\delta(x)\\
-&\lim\limits_{x\to\pm\infty}\phi(x) = 0\\
+&\lim\limits_{x\to\pm\infty}\phi(x) = \infty\\
 \frac{d^2 G(x,x')}{dx^2} &- \frac{1}{L^2}G(x,x') = -\frac{\delta(x-x')}{D}\\
 &\lim\limits_{x\to\pm\infty}G(x,x') = 0
 \end{align*}
@@ -212,7 +212,7 @@ Consider a plane source in an infinite medium.
 Using variation of constants to solve the Green's function part:
 %
 \begin{equation*}
-G(x,x') = \frac{L}{2D}H(x-x')e^{-(x-x')/L} + \frac{L}{2D}[1-H(x-x')]e^{x-x'}
+G(x,x') = \frac{L}{2D}H(x-x')e^{-(x-x')/L} + \frac{L}{2D}[1-H(x-x')]e^{(x-x')/L}
 \end{equation*}
 
 \begin{align*}
@@ -231,47 +231,33 @@ I think it will be way more interesting.
 With that in mind, here's an update of the TE, where I will use $\psi(\vec{r}, E, \vOmega, t)$ for angular neutron flux.
 %
 \begin{align*}
-\frac{1}{v} \frac{d \psi}{dt} &+ \vOmega \cdot \nabla \psi(\vec{r}, E, \vOmega, t) + \Sigma_t \psi(\vec{r}, E, \vOmega, t) = \int_{4 \pi} d\vOmega \int_0^{\infty} dE' \: \Sigma_s(E', \vOmega' \rightarrow E, \vOmega) \psi(\vec{r}, E', \vOmega', t)\\
- +& \frac{\chi(E)}{4 \pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4 \pi} d\vOmega \:\psi(\vec{r}, E', \vOmega', t + S(\vec{r}(\vec{r}, E, \vOmega, t)
+\frac{1}{v} \frac{d \psi}{dt} &+ \vOmega \cdot \nabla \psi(\vec{r}, E, \vOmega, t) + \Sigma_t \psi(\vec{r}, E, \vOmega, t) = \int_{4 \pi} d\vOmega' \int_0^{\infty} dE' \: \Sigma_s(E', \vOmega' \rightarrow E, \vOmega) \psi(\vec{r}, E', \vOmega', t)\\
+ +& \frac{\chi(E)}{4 \pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4 \pi} d\vOmega' \:\psi(\vec{r}, E', \vOmega', t + S(\vec{r}, E, \vOmega, t)
 \end{align*}
 
 For generality (and because it can be tricky), I want to cover the \underline{streaming term in curvilinear coordinates}.
-$\vOmega \cdot \nabla$ is the derivative of angular flux along the direction of motion $\vOmega$.
-
-[draw picture of angles]
-
+$\vOmega \cdot \nabla$ is the derivative of angular flux along the direction of motion $\vOmega$. (See Figure~\ref{fig:cart-coord}).
+%
+\begin{figure}[h!]
+    \begin{center}
+    \includegraphics[keepaspectratio, width = 4 in]{../figs/cartesian-coords}
+    \end{center}   
+    \caption{Cartesian: L\&M Chp.\ 1}
+    \label{fig:cart-coord}
+\end{figure}
+%
 \begin{align*}
 \vOmega &= \hat{e}_1 \cos(\theta) + \hat{e}_2 \cos(\gamma) + \hat{e}_3 \cos(\chi) \\
 \nabla &= \hat{e}_1 \underbrace{\mathcal{D}_1}_{\text{derivative in direction }\hat{e}_1} + \hat{e}_2 \mathcal{D}_2 + \hat{e}_3 \mathcal{D}_3\\
 &= \hat{e}_1 \frac{d}{dx} + \hat{e}_2 \frac{d}{dy} + \hat{e}_3 \frac{d}{dz} \quad \text{in Cartesian}
 \end{align*}
 
-In curvilinear geometry, neutrons ``migrate" across $\vOmega$ as the stream in straight lines. 
-We can see this in spherical geometry (note, $dr$, $d\theta$, and $ds$ are assumed to be very small):
-
-[draw streaming picture]
-
-\begin{align*}
-\frac{d \psi}{ds} &= \frac{d \psi}{dr} \frac{dr}{ds} + \frac{d\psi}{d\mu} \frac{d\mu}{ds} \\
-&\text{Look a the figure to define the terms}\\
-\frac{dr}{ds} &= \cos(\theta) = \mu \\
-%
-\frac{d \mu}{ds} &= -\sin(\theta) \frac{d \theta}{ds} = -\sin(\theta) \biggl(\frac{-\sin(\theta)}{r} \biggr) = \biggl(\frac{1 - \mu^2}{r} \biggr) \\
-%
-\frac{d\psi}{ds} &= \mu \frac{\partial \psi}{\partial r} + \underbrace{\frac{(1 - \mu^2)}{r}\frac{\partial \psi}{\partial \mu}}_{\text{redistribution term}}
-\end{align*}
-%
-We can extend all of that we get the ``conservation form" of the term (see B \& G 1.3b for derivation)
-\[\frac{d\psi}{ds} = \frac{\mu}{r^2} \frac{\partial(r^2 \psi)}{\partial r} + \frac{1}{r} \frac{\partial}{\partial \mu}\bigl[(1 - \mu^2) \psi \bigr] \:. \]
-
-A table of this term is given in L \& M 1.1-3 for various geometries.
-
 %--------------------------------------------------------------------
 \underline{Criticality and Eigenproblems}
 \begin{itemize}
 \item Criticality refers to a self-sustaining \textit{and} controlled chain reaction $\rightarrow$ production = losses
-\item subcritical: production < loss $\rightarrow$ chain reaction cannot sustain itself
-\item supercritical: production > loss $\rightarrow$ chain reaction increases 
+\item subcritical: production $<$ loss $\rightarrow$ chain reaction cannot sustain itself
+\item supercritical: production $>$ loss $\rightarrow$ chain reaction increases 
 \end{itemize}
 %
 In the transport model (separation of variables):
